[package]
name = "nostromorust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
eframe = { version = "0.32", default-features = true }
reqwest = { version = "0.12", default-features = true, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
